--- a/css/theme/blue/common_ko_darknavy.css
+++ b/css/theme/blue/common_ko_darknavy.css
@@ -5858,6 +5858,9 @@ html.popOpen{ /* sjHa 추가 2022.11.17*/
     /*border: 1px solid #000;*/ /*sjHa 삭제*/
     width: 100%; height: 100%;
 }
+.dashboardTop .graphWrap .graph div{
+    width: 100%; height: 100%;
+}
 .dashboardTop .graphWrap .perCent{
     position: absolute;
     left: 52%; top: 50%;
@@ -6926,4 +6929,45 @@ display: block;
 }
 .pt0{
     padding-top: 0;
+}
+.mainDashborad{}
+.mainDashborad .header{
+    height: 80px;
+}
+.mainDashborad .header .top{
+    padding: 0 30px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: var(--basic-color);
+}
+.mainDashborad .header .txt{
+    font-size: 22px;
+    font-weight: 300;
+    color: #fff;
+    padding-top: 16px;
+}
+.mainDashborad .header .inner{
+    height: 40px;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow:0px 3px 6px rgba(96,120,175,0.16);
+}
+.mainDashborad .header #mainGnb{
+    display: flex;
+    margin-left: 65px;
+}
+.mainDashborad .header #mainGnb li{
+    margin-right: 50px;
+}
+.mainDashborad .header #mainGnb li a{
+    font-size: 17px; font-weight: 500;
+    color: #999999;
+    letter-spacing: -0.5px;
+}
+.mainDashborad .header #mainGnb li.on a{
+    color: var(--basic-color); font-weight: bold;
 }
